# tradeDocumentPipeline

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: PRD.md  architecture-notes.md  brief.md  jd.md  tech-writeup.md
evals/: README.md
evals/datasets/extraction_v1/: gold.jsonl  predictions.jsonl
evals/results/: 20260530T160833Z.json
evals/runners/: decision_eval.py  extraction_eval.py  run_all.py
samples/: queries.md
src/nova/: settings.py
src/nova/agents/: __init__.py  cross_validator.py  decision_policy.py  extractor.py  router.py  shipment_router.py  validator.py
src/nova/api/: README.md  __init__.py  app.py  dependencies.py  errors.py
src/nova/ingestion/: README.md  __init__.py  errors.py  loader.py  page_prep.py
src/nova/llm/: __init__.py  client.py
src/nova/mail/: __init__.py  local_mailbox.py
src/nova/observability/: __init__.py  cost_meter.py  logging.py  tracer.py  tracing.py
src/nova/orchestration/: README.md  __init__.py  graph.py  runner.py  state.py
src/nova/prompts/: extractor.py
src/nova/query/: README.md  __init__.py  query_agent.py  tools.py
src/nova/rules/: __init__.py  engine.py  loader.py
src/nova/schemas/: __init__.py  api.py  decision.py  extraction.py  ingestion.py  pipeline.py  query.py  rules.py  shipment.py  validation.py
src/nova/storage/: README.md  __init__.py  migrations.py  models.py  repositories.py
src/nova/trigger/: __init__.py  events.py  schemas.py  shipment_pipeline.py
tests/: test_api.py  test_cross_validator.py  test_extractor.py  test_ingestion.py  test_orchestration.py  test_query.py  test_router.py  test_rules.py  test_schemas.py  test_shipment_router.py  test_storage.py  test_trigger.py  test_validator.py
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts  types.ts
ui/src/cg/: DiscrepancyDetailDrawer.tsx  InboxSimulator.tsx  ShipmentDetail.tsx  ShipmentInbox.tsx  useShipmentEvents.ts
ui/src/components/: DecisionCard.tsx  ExtractionTable.tsx  (+4 more)
(+5 files in other folders)
